lib/llm/tests/snapshots/responses_http_replay__responses_unary_text.snap
---
source: lib/llm/tests/responses_http_replay.rs
expression: canonicalize(body)
---
{
  "background": false,
  "created_at": 1000000000,
  "completed_at": 1000000000,
  "id": "[ID-1]",
  "max_output_tokens": 64,
  "metadata": {},
  "model": "harness-model",
  "object": "response",
  "output": [
    {
      "type": "message",
      "content": [
        {
          "type": "output_text",
          "annotations": [],
          "logprobs": [],
          "text": "Pong."
        }
      ],
      "id": "[ID-2]",
      "role": "assistant",
      "status": "completed"
    }
  ],
  "parallel_tool_calls": true,
  "service_tier": "auto",
  "status": "completed",
  "temperature": 1.0,
  "text": {
    "format": {
      "type": "text"
    }
  },
  "tool_choice": "auto",
  "tools": [],
  "top_logprobs": 0,
  "top_p": 1.0,
  "truncation": "disabled",
  "usage": {
    "input_tokens": 5,
    "input_tokens_details": {
      "cache_write_tokens": 0,
      "cached_tokens": 0
    },
    "output_tokens": 2,
    "output_tokens_details": {
      "reasoning_tokens": 0
    },
    "total_tokens": 7
  },
  "billing": null,
  "conversation": null,
  "error": null,
  "incomplete_details": null,
  "instructions": null,
  "max_tool_calls": null,
  "previous_response_id": null,
  "prompt": null,
  "prompt_cache_key": null,
  "prompt_cache_retention": null,
  "reasoning": null,
  "safety_identifier": null,
  "presence_penalty": 0.0,
  "frequency_penalty": 0.0,
  "store": false
}
